Function descriptions added as comment to tf_argmax_equal_cast.ipynb

--- a/tf_argmax_equal_cast.ipynb
+++ b/tf_argmax_equal_cast.ipynb
@@ -11,6 +11,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tf.argmax: Returns the index with the largest value across axes of a tensor. \n",
+    "# tf.cast: Casts a tensor to a new type\n",
+    "# tf.equal: Returns the truth value of (x == y) element-wise"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 47,
    "metadata": {},
    "outputs": [],
