tf.reduce_mean is added to the file. It is used when calculating accuracy so it is good to have the usage of this function here as well.

--- a/tf_argmax_equal_cast.ipynb
+++ b/tf_argmax_equal_cast.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "# tf.argmax: Returns the index with the largest value across axes of a tensor. \n",
     "# tf.cast: Casts a tensor to a new type\n",
-    "# tf.equal: Returns the truth value of (x == y) element-wise"
+    "# tf.equal: Returns the truth value of (x == y) element-wise\n",
+    "#tf.reduce_mean: Computes the mean of elements across dimensions of a tensor. "
    ]
   },
   {
@@ -26,12 +27,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = tf.constant([[1,8,3,4],\n",
-    "                 [6,7,9,9],\n",
-    "                 [2,4,8,8]])\n",
-    "b = tf.constant([[1,7,9,8], \n",
-    "                 [3,6,1,9],\n",
-    "                 [9,3,7,1]])\n"
+    "a = tf.constant([[1.,8.,9.,4.],\n",
+    "                 [8.,7.,9.,9.],\n",
+    "                 [7.,4.,8.,8.]])\n",
+    "b = tf.constant([[1.,7.,9.,8.], \n",
+    "                 [3.,6.,1.,9.],\n",
+    "                 [9.,3.,7.,1.]])\n"
    ]
   },
   {
@@ -43,9 +44,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c: [1 0 1 1]\n",
+      "c: [1 0 0 1]\n",
       "d: [2 0 0 1]\n",
-      "e: [0 1 0 1]\n"
+      "e: [0. 1. 1. 1.]\n",
+      "following is used when calculating accuracy: \n",
+      "0.75\n"
      ]
     }
    ],
@@ -57,7 +60,11 @@
     "sess = tf.Session()\n",
     "print(\"c: \" + str(sess.run(c)))\n",
     "print(\"d: \" + str(sess.run(d)))\n",
-    "print(\"e: \" + str(sess.run(tf.cast(e, dtype=tf.int32))))"
+    "dd = sess.run(tf.cast(e, dtype=tf.float32))\n",
+    "print(\"e: \" + str(dd))\n",
+    "\n",
+    "print(\"following is used when calculating accuracy: \")\n",
+    "print(sess.run(tf.reduce_mean(tf.cast(dd, dtype=tf.float32))))"
    ]
   },
   {
@@ -69,9 +76,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "f: [1 2 2]\n",
+      "f: [2 2 2]\n",
       "g: [2 3 0]\n",
-      "h: [0 0 0]\n"
+      "h: [1. 0. 0.]\n",
+      "0.33333334\n"
      ]
     }
    ],
@@ -83,7 +91,9 @@
     "sess = tf.Session()\n",
     "print(\"f: \" + str(sess.run(f)))\n",
     "print(\"g: \" + str(sess.run(g)))\n",
-    "print(\"h: \" + str(sess.run(tf.cast(h, dtype=tf.int32))))"
+    "print(\"h: \" + str(sess.run(tf.cast(h, dtype=tf.float32))))\n",
+    "\n",
+    "print(sess.run(tf.reduce_mean(tf.cast(h, dtype=tf.float32))))"
    ]
   },
   {
