--- a/tf_read_csv_file.ipynb
+++ b/tf_read_csv_file.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,28 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
     "# This function only uses tf.TextLineReader(...) and does not read other types of files i.e. binary files\n",
-    "def get_next_mini_batch(batch_size, num_epochs):\n",
-    "\n",
-    "    #Input parameters:\n",
-    "    ###################################################################################\n",
-    "\n",
-    "    # Data may reside in several files. 2 is created here for illustration purposes\n",
-    "    train_path1 = \"train1.csv\"\n",
-    "    train_path2 = \"train2.csv\"\n",
-    "\n",
-    "    # Determine default values for each column in case data is missing\n",
-    "    record_defaults = [[\"\"], [0.0], [0.0], [0.0], [0.0], [0.0], [0.0], [0.0]]\n",
-    "    ###################################################################################\n",
+    "def get_next_mini_batch(batch_size, num_epochs, input_paths, record_defaults):\n",
     "\n",
     "    # string_input_producer creates a FIFO queue for holding the filenames until the reader needs them\n",
-    "    filename_queue = tf.train.string_input_producer([train_path1, train_path2],\n",
+    "    filename_queue = tf.train.string_input_producer(input_paths,\n",
     "                                                    num_epochs = num_epochs,\n",
     "                                                    shuffle = True)\n",
     "\n",
@@ -64,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {
     "scrolled": false
    },
@@ -73,96 +62,96 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-4.  2.  9.  4.  5.]\n",
-      " [ 1.  5.  8.  3.  3.]\n",
-      " [ 4.  4.  4.  4.  4.]\n",
+      "[[6. 3. 7. 8. 4.]\n",
+      " [6. 6. 6. 6. 6.]\n",
+      " [4. 4. 4. 4. 4.]\n",
+      " [2. 2. 2. 2. 2.]\n",
+      " [9. 8. 7. 4. 2.]]\n",
+      "[[0. 1.]\n",
+      " [1. 0.]\n",
+      " [1. 0.]\n",
+      " [1. 0.]\n",
+      " [0. 1.]]\n",
+      "[[ 1.  5.  8.  3.  3.]\n",
+      " [11. 11. 11. 11. 11.]\n",
       " [13. 13. 13. 13. 13.]\n",
+      " [ 4.  6.  3.  4.  3.]\n",
       " [ 3.  3.  3.  3.  3.]]\n",
       "[[0. 1.]\n",
+      " [1. 0.]\n",
+      " [1. 0.]\n",
       " [0. 1.]\n",
-      " [1. 0.]\n",
-      " [1. 0.]\n",
       " [1. 0.]]\n",
-      "[[10. 10. 10. 10. 10.]\n",
-      " [-1.  2.  3.  8.  5.]\n",
-      " [ 4.  6.  3.  4.  3.]\n",
-      " [ 7.  7.  7.  7.  7.]\n",
-      " [ 1.  5.  4.  2.  7.]]\n",
-      "[[1. 0.]\n",
-      " [0. 1.]\n",
-      " [0. 1.]\n",
-      " [1. 0.]\n",
-      " [0. 1.]]\n",
-      "[[-4.  2.  9.  4.  5.]\n",
-      " [ 9.  9.  9.  9.  9.]\n",
+      "[[ 4.  6.  3.  4.  3.]\n",
       " [ 3.  5.  6.  9.  4.]\n",
-      " [-1.  2.  3.  8.  5.]\n",
-      " [ 3.  5.  6.  9.  4.]]\n",
+      " [ 9.  9.  9.  9.  9.]\n",
+      " [ 1.  5.  8.  3.  3.]\n",
+      " [-1.  2.  3.  8.  5.]]\n",
       "[[0. 1.]\n",
+      " [0. 1.]\n",
       " [1. 0.]\n",
+      " [0. 1.]\n",
+      " [0. 1.]]\n",
+      "[[ 9.  8.  7.  4.  2.]\n",
+      " [ 3.  2.  8.  9.  1.]\n",
+      " [-4.  2.  9.  4.  5.]\n",
+      " [ 3.  2.  8.  9.  1.]\n",
+      " [ 4.  7.  2.  3.  8.]]\n",
+      "[[0. 1.]\n",
+      " [0. 1.]\n",
       " [0. 1.]\n",
       " [0. 1.]\n",
       " [0. 1.]]\n",
-      "[[ 3.  2.  8.  9.  1.]\n",
-      " [ 6.  6.  6.  6.  6.]\n",
-      " [ 6.  3.  7.  8.  4.]\n",
-      " [ 8.  8.  8.  8.  8.]\n",
-      " [11. 11. 11. 11. 11.]]\n",
+      "[[ 1.  5.  4.  2.  7.]\n",
+      " [ 5.  5.  5.  5.  5.]\n",
+      " [ 1.  5.  4.  2.  7.]\n",
+      " [-4.  2.  9.  4.  5.]\n",
+      " [ 4.  4.  4.  4.  4.]]\n",
       "[[0. 1.]\n",
       " [1. 0.]\n",
       " [0. 1.]\n",
-      " [1. 0.]\n",
-      " [1. 0.]]\n",
-      "[[9. 8. 7. 4. 2.]\n",
-      " [2. 2. 2. 2. 2.]\n",
-      " [5. 5. 5. 5. 5.]\n",
-      " [9. 8. 7. 4. 2.]\n",
-      " [2. 2. 2. 2. 2.]]\n",
-      "[[0. 1.]\n",
-      " [1. 0.]\n",
-      " [1. 0.]\n",
       " [0. 1.]\n",
       " [1. 0.]]\n",
-      "[[8. 8. 8. 8. 8.]\n",
-      " [4. 7. 2. 3. 8.]\n",
-      " [1. 1. 1. 1. 1.]\n",
-      " [3. 2. 8. 9. 1.]\n",
-      " [4. 4. 4. 4. 4.]]\n",
+      "[[ 8.  8.  8.  8.  8.]\n",
+      " [-1.  2.  3.  8.  5.]\n",
+      " [ 2.  2.  2.  2.  2.]\n",
+      " [10. 10. 10. 10. 10.]\n",
+      " [ 4.  7.  2.  3.  8.]]\n",
       "[[1. 0.]\n",
       " [0. 1.]\n",
       " [1. 0.]\n",
-      " [0. 1.]\n",
-      " [1. 0.]]\n",
+      " [1. 0.]\n",
+      " [0. 1.]]\n",
       "[[ 7.  7.  7.  7.  7.]\n",
-      " [12. 12. 12. 12. 12.]\n",
-      " [12. 12. 12. 12. 12.]\n",
+      " [ 3.  5.  6.  9.  4.]\n",
+      " [ 8.  8.  8.  8.  8.]\n",
       " [ 1.  1.  1.  1.  1.]\n",
       " [13. 13. 13. 13. 13.]]\n",
       "[[1. 0.]\n",
-      " [1. 0.]\n",
+      " [0. 1.]\n",
       " [1. 0.]\n",
       " [1. 0.]\n",
       " [1. 0.]]\n",
-      "[[10. 10. 10. 10. 10.]\n",
+      "[[ 3.  3.  3.  3.  3.]\n",
+      " [ 5.  5.  5.  5.  5.]\n",
       " [ 9.  9.  9.  9.  9.]\n",
-      " [ 3.  3.  3.  3.  3.]\n",
-      " [ 1.  5.  4.  2.  7.]\n",
+      " [ 6.  3.  7.  8.  4.]\n",
       " [11. 11. 11. 11. 11.]]\n",
       "[[1. 0.]\n",
       " [1. 0.]\n",
       " [1. 0.]\n",
       " [0. 1.]\n",
       " [1. 0.]]\n",
-      "[[1. 5. 8. 3. 3.]\n",
-      " [5. 5. 5. 5. 5.]\n",
-      " [4. 6. 3. 4. 3.]\n",
-      " [6. 6. 6. 6. 6.]\n",
-      " [4. 7. 2. 3. 8.]]\n",
-      "[[0. 1.]\n",
+      "[[10. 10. 10. 10. 10.]\n",
+      " [12. 12. 12. 12. 12.]\n",
+      " [12. 12. 12. 12. 12.]\n",
+      " [ 7.  7.  7.  7.  7.]\n",
+      " [ 6.  6.  6.  6.  6.]]\n",
+      "[[1. 0.]\n",
       " [1. 0.]\n",
-      " [0. 1.]\n",
       " [1. 0.]\n",
-      " [0. 1.]]\n",
+      " [1. 0.]\n",
+      " [1. 0.]]\n",
       "Done training, epoch reached\n"
      ]
     }
@@ -172,7 +161,13 @@
     "\n",
     "batch_size = 5\n",
     "num_epochs = 2\n",
-    "X_mini_batch, Y_mini_batch = get_next_mini_batch(batch_size, num_epochs)\n",
+    "# Data may reside in several files. 2 is created here for illustration purposes\n",
+    "train_path1 = \"train1.csv\"\n",
+    "train_path2 = \"train2.csv\"\n",
+    "input_paths = [train_path1, train_path2]\n",
+    "# Determine default values for each column in case data is missing\n",
+    "record_defaults = [[\"\"], [0.0], [0.0], [0.0], [0.0], [0.0], [0.0], [0.0]]\n",
+    "X_mini_batch, Y_mini_batch = get_next_mini_batch(batch_size, num_epochs, input_paths, record_defaults)\n",
     "\n",
     "with tf.Session() as sess:\n",
     "\n",
