New function explanation added in tf.nn.in_top_k

--- a/tf_read_csv_file.ipynb
+++ b/tf_read_csv_file.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {
     "scrolled": false
    },
@@ -23,7 +23,7 @@
     "    # string_input_producer creates a FIFO queue for holding the filenames until the reader needs them\n",
     "    filename_queue = tf.train.string_input_producer(input_paths,\n",
     "                                                    num_epochs = num_epochs,\n",
-    "                                                    shuffle = True)\n",
+    "                                                    shuffle = False)\n",
     "\n",
     "    # Select the type of reader that will be used to read the CSV files down below.\n",
     "    reader = tf.TextLineReader(skip_header_lines=1)\n",
@@ -40,20 +40,21 @@
     "    labels = tf.stack([col7, col8])\n",
     "\n",
     "\n",
-    "    min_after_dequeue = batch_size * 3\n",
+    "    min_after_dequeue = 0#batch_size * 3\n",
     "    capacity = min_after_dequeue + 10 * batch_size\n",
     "\n",
     "    X_mini_batch, Y_mini_batch = tf.train.shuffle_batch([features, labels], \n",
     "                                                        batch_size=batch_size, \n",
     "                                                        capacity=capacity,\n",
-    "                                                        min_after_dequeue = min_after_dequeue)\n",
+    "                                                        min_after_dequeue = min_after_dequeue,\n",
+    "                                                        allow_smaller_final_batch = True)\n",
     "    \n",
     "    return X_mini_batch, Y_mini_batch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {
     "scrolled": false
    },
@@ -62,94 +63,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[6. 3. 7. 8. 4.]\n",
-      " [6. 6. 6. 6. 6.]\n",
-      " [4. 4. 4. 4. 4.]\n",
-      " [2. 2. 2. 2. 2.]\n",
-      " [9. 8. 7. 4. 2.]]\n",
-      "[[0. 1.]\n",
-      " [1. 0.]\n",
-      " [1. 0.]\n",
-      " [1. 0.]\n",
-      " [0. 1.]]\n",
-      "[[ 1.  5.  8.  3.  3.]\n",
-      " [11. 11. 11. 11. 11.]\n",
-      " [13. 13. 13. 13. 13.]\n",
+      "[[-1.  2.  3.  8.  5.]\n",
       " [ 4.  6.  3.  4.  3.]\n",
-      " [ 3.  3.  3.  3.  3.]]\n",
-      "[[0. 1.]\n",
-      " [1. 0.]\n",
-      " [1. 0.]\n",
-      " [0. 1.]\n",
-      " [1. 0.]]\n",
-      "[[ 4.  6.  3.  4.  3.]\n",
-      " [ 3.  5.  6.  9.  4.]\n",
-      " [ 9.  9.  9.  9.  9.]\n",
+      " [-4.  2.  9.  4.  5.]\n",
       " [ 1.  5.  8.  3.  3.]\n",
-      " [-1.  2.  3.  8.  5.]]\n",
-      "[[0. 1.]\n",
-      " [0. 1.]\n",
-      " [1. 0.]\n",
-      " [0. 1.]\n",
-      " [0. 1.]]\n",
-      "[[ 9.  8.  7.  4.  2.]\n",
       " [ 3.  2.  8.  9.  1.]\n",
-      " [-4.  2.  9.  4.  5.]\n",
-      " [ 3.  2.  8.  9.  1.]\n",
-      " [ 4.  7.  2.  3.  8.]]\n",
-      "[[0. 1.]\n",
-      " [0. 1.]\n",
-      " [0. 1.]\n",
-      " [0. 1.]\n",
-      " [0. 1.]]\n",
-      "[[ 1.  5.  4.  2.  7.]\n",
-      " [ 5.  5.  5.  5.  5.]\n",
-      " [ 1.  5.  4.  2.  7.]\n",
-      " [-4.  2.  9.  4.  5.]\n",
-      " [ 4.  4.  4.  4.  4.]]\n",
-      "[[0. 1.]\n",
-      " [1. 0.]\n",
-      " [0. 1.]\n",
-      " [0. 1.]\n",
-      " [1. 0.]]\n",
-      "[[ 8.  8.  8.  8.  8.]\n",
-      " [-1.  2.  3.  8.  5.]\n",
-      " [ 2.  2.  2.  2.  2.]\n",
-      " [10. 10. 10. 10. 10.]\n",
-      " [ 4.  7.  2.  3.  8.]]\n",
-      "[[1. 0.]\n",
-      " [0. 1.]\n",
-      " [1. 0.]\n",
-      " [1. 0.]\n",
-      " [0. 1.]]\n",
-      "[[ 7.  7.  7.  7.  7.]\n",
-      " [ 3.  5.  6.  9.  4.]\n",
-      " [ 8.  8.  8.  8.  8.]\n",
-      " [ 1.  1.  1.  1.  1.]\n",
-      " [13. 13. 13. 13. 13.]]\n",
-      "[[1. 0.]\n",
-      " [0. 1.]\n",
-      " [1. 0.]\n",
-      " [1. 0.]\n",
-      " [1. 0.]]\n",
-      "[[ 3.  3.  3.  3.  3.]\n",
-      " [ 5.  5.  5.  5.  5.]\n",
-      " [ 9.  9.  9.  9.  9.]\n",
       " [ 6.  3.  7.  8.  4.]\n",
+      " [ 3.  5.  6.  9.  4.]\n",
+      " [ 9.  8.  7.  4.  2.]\n",
+      " [ 1.  5.  4.  2.  7.]\n",
+      " [ 4.  7.  2.  3.  8.]]\n",
+      "[[0. 1.]\n",
+      " [0. 1.]\n",
+      " [0. 1.]\n",
+      " [0. 1.]\n",
+      " [0. 1.]\n",
+      " [0. 1.]\n",
+      " [0. 1.]\n",
+      " [0. 1.]\n",
+      " [0. 1.]\n",
+      " [0. 1.]]\n",
+      "[[ 1.  1.  1.  1.  1.]\n",
+      " [ 2.  2.  2.  2.  2.]\n",
+      " [ 3.  3.  3.  3.  3.]\n",
+      " [ 4.  4.  4.  4.  4.]\n",
+      " [ 5.  5.  5.  5.  5.]\n",
+      " [ 6.  6.  6.  6.  6.]\n",
+      " [ 7.  7.  7.  7.  7.]\n",
+      " [ 8.  8.  8.  8.  8.]\n",
+      " [ 9.  9.  9.  9.  9.]\n",
+      " [10. 10. 10. 10. 10.]]\n",
+      "[[1. 0.]\n",
+      " [1. 0.]\n",
+      " [1. 0.]\n",
+      " [1. 0.]\n",
+      " [1. 0.]\n",
+      " [1. 0.]\n",
+      " [1. 0.]\n",
+      " [1. 0.]\n",
+      " [1. 0.]\n",
+      " [1. 0.]]\n",
+      "[[13. 13. 13. 13. 13.]\n",
+      " [12. 12. 12. 12. 12.]\n",
       " [11. 11. 11. 11. 11.]]\n",
       "[[1. 0.]\n",
-      " [1. 0.]\n",
-      " [1. 0.]\n",
-      " [0. 1.]\n",
-      " [1. 0.]]\n",
-      "[[10. 10. 10. 10. 10.]\n",
-      " [12. 12. 12. 12. 12.]\n",
-      " [12. 12. 12. 12. 12.]\n",
-      " [ 7.  7.  7.  7.  7.]\n",
-      " [ 6.  6.  6.  6.  6.]]\n",
-      "[[1. 0.]\n",
-      " [1. 0.]\n",
-      " [1. 0.]\n",
       " [1. 0.]\n",
       " [1. 0.]]\n",
       "Done training, epoch reached\n"
@@ -159,8 +116,8 @@
    "source": [
     "tf.reset_default_graph()\n",
     "\n",
-    "batch_size = 5\n",
-    "num_epochs = 2\n",
+    "batch_size = 10\n",
+    "num_epochs = 1\n",
     "# Data may reside in several files. 2 is created here for illustration purposes\n",
     "train_path1 = \"train1.csv\"\n",
     "train_path2 = \"train2.csv\"\n",
