--- a/input_normalization/normalize_input.ipynb
+++ b/input_normalization/normalize_input.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
     "        while True:\n",
     "            try:\n",
     "              features, labels = sess.run(next_element)\n",
-    "              print(features)\n",
+    "              print(\"features:\\n\", features)\n",
     "              #print(sess.run(\"features:\\n\", sess.run(features)))\n",
     "            \n",
     "              # Normalize as ((input_features - mu) / sigma_square)\n",
@@ -130,18 +130,12 @@
     "              print(\"All data has been normalized and printed out\")\n",
     "              break\n",
     "                \n",
-    "        mu /= num_examples\n",
-    "        sigma_square /= num_examples\n",
-    "    \n",
-    "        #print(\"mu: \\n\", sess.run(mu))\n",
-    "        #print(\"sigma: \\n\", sess.run(sigma_square))\n",
-    "    \n",
-    "    return mu, sigma_square"
+    "    return"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 132,
    "metadata": {
     "scrolled": false
    },
@@ -155,7 +149,8 @@
       " [[3.409091  3.6818182 1.25      2.4772727 2.8863637]]\n",
       "sigma: \n",
       " [[65.86364  67.90909   7.068182 14.295455 25.704546]]\n",
-      "[[ 1.  2.  5.  9.  8.]\n",
+      "features:\n",
+      " [[ 1.  2.  5.  9.  8.]\n",
       " [ 4.  5.  1.  1.  6.]\n",
       " [-4.  5.  1.  0. 12.]\n",
       " [ 1.  4.  7.  4.  2.]\n",
@@ -176,7 +171,8 @@
       " [-0.05175983 -0.05421687 -0.17684887 -0.17329094  0.2378426 ]\n",
       " [ 0.0089717   0.04886211  0.24758841 -0.10333863 -0.42351902]\n",
       " [-0.02139406 -0.01004016 -0.03536977 -0.10333863  0.04332449]]\n",
-      "[[ -5. -10.   4.   4.   7.]\n",
+      "features:\n",
+      " [[ -5. -10.   4.   4.   7.]\n",
       " [ -4.  -6.   1.   1.   7.]\n",
       " [ -4.  -6.  -2.   2.   8.]\n",
       " [  8.   2.   1.   1.   3.]\n",
@@ -197,7 +193,8 @@
       " [ 0.03933747  0.00468541 -0.03536977 -0.24324323  0.08222811]\n",
       " [ 0.06970324  0.04886211 -0.31832796 -0.10333863  0.04332449]\n",
       " [ 0.08488613  0.06358769  0.10610932 -0.03338633 -0.15119363]]\n",
-      "[[  2.   3.   1.   8.   1.]\n",
+      "features:\n",
+      " [[  2.   3.   1.   8.   1.]\n",
       " [ 11.   9.   2.   1.  -1.]\n",
       " [  0.  30.   1.   2.  -2.]\n",
       " [  1.  12.  -1.   7.  -2.]\n",
@@ -218,7 +215,8 @@
       " [-0.12767425 -0.20147257  0.10610932 -0.17329094  0.12113173]\n",
       " [-0.1732229  -0.11311915 -0.45980707 -0.03338633  0.2767462 ]\n",
       " [-0.05175983 -0.02476573 -0.31832796 -0.31319556  0.00442086]]\n",
-      "[[ 2.  1.  2.  3. -4.]\n",
+      "features:\n",
+      " [[ 2.  1.  2.  3. -4.]\n",
       " [ 2.  4.  0.  6.  1.]\n",
       " [ 4.  6. -1.  0.  6.]\n",
       " [ 2.  2.  2.  2.  2.]\n",
@@ -239,7 +237,8 @@
       " [ 0.02415459  0.01941098  0.24758841  0.03656597 -0.11229001]\n",
       " [ 0.10006901  0.09303883  0.10610932 -0.03338633 -0.15119363]\n",
       " [ 0.10006901  0.09303883  0.10610932 -0.03338633 -0.19009727]]\n",
-      "[[ 7.  3. -4.  1.  8.]\n",
+      "features:\n",
+      " [[ 7.  3. -4.  1.  8.]\n",
       " [ 3.  7. -4.  6.  3.]\n",
       " [-1.  0.  1.  1.  7.]\n",
       " [ 4.  2.  3. -4.  3.]]\n",
@@ -249,18 +248,6 @@
       " [-0.06694271 -0.05421687 -0.03536977 -0.10333863  0.16003536]\n",
       " [ 0.0089717  -0.02476573  0.24758841 -0.45310017  0.00442086]]\n",
       "All data has been normalized and printed out\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'num_examples' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-121-d94bbfad0ff1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mmu\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msigma_square\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_input_norm_params\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_input_paths\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mminibatch_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mnormalize_train_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_input_paths\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mminibatch_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmu\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msigma_square\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-120-467432388844>\u001b[0m in \u001b[0;36mnormalize_train_data\u001b[0;34m(train_input_paths, minibatch_size, mu, sigma_square)\u001b[0m\n\u001b[1;32m     35\u001b[0m               \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m         \u001b[0mmu\u001b[0m \u001b[0;34m/=\u001b[0m \u001b[0mnum_examples\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     38\u001b[0m         \u001b[0msigma_square\u001b[0m \u001b[0;34m/=\u001b[0m \u001b[0mnum_examples\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'num_examples' is not defined"
      ]
     }
    ],
